--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,4 @@ spring.thymeleaf.cache=true
 # Disable H2 console in prod
 spring.h2.console.enabled=false
 server.port=8080
+google.maps.api-key=${GOOGLE_MAPS_API_KEY:}
