--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 spring.application.name=boraRoleta
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+
+spring.config.import=optional:file:.env[.properties]
+
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false
 spring.thymeleaf.cache=false
-# Do not force a profile here. Use -Dspring.profiles.active or environment variables to select profile (prod/test)
